# nanogate

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  test_exec.py  test_exec_2.py
agent/: __init__.py  agent_loop.py  context.py  exec_tool.py  plugin_loader.py  server.py  session_persistence.py  tool_gateway.py
agent/routes/: __init__.py  approval.py  chat.py
gateway/: __init__.py  docker_manager.py  registry.py  server.py  webhook_dispatcher.py
gateway/routes/: __init__.py  approval.py  chat.py  tenant.py
gateway/scripts/: mint_gmail_token.py
nanogate/: __init__.py  bus.py
sample/: tenant_config.json  test_chat.py
sample/tools/: gateway_exec.py  my_custom_tool.py
tests/: conftest.py
tests/integration/: test_chat_api.py
